--- a/SOAP-dontDropIt/Web.config
+++ b/SOAP-dontDropIt/Web.config
@@ -7,6 +7,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="SOAP_dontDropIt.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SOAP-dontDropIt-20160630021642.mdf;Initial Catalog=aspnet-SOAP-dontDropIt-20160630021642;Integrated Security=True" providerName="System.Data.SqlClient"/>
@@ -94,4 +97,15 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  <applicationSettings>
+    <SOAP_dontDropIt.Properties.Settings>
+      <setting name="SOAP_dontDropIt_www_dev_ProcessingGateway" serializeAs="String">
+        <value>http://www-dev/magic-services/ProcessingGateway.asmx</value>
+      </setting>
+      <setting name="SOAP_dontDropIt_com_collectorsolutions_secure_legacy_ProcessingGateway"
+        serializeAs="String">
+        <value>https://secure.collectorsolutions.com/CSI_eCollections_Portal/ProcessingGateway.asmx</value>
+      </setting>
+    </SOAP_dontDropIt.Properties.Settings>
+  </applicationSettings>
 </configuration>
