--- a/SOAP-dontDropIt/Web.config
+++ b/SOAP-dontDropIt/Web.config
@@ -106,6 +106,10 @@
         serializeAs="String">
         <value>https://secure.collectorsolutions.com/CSI_eCollections_Portal/ProcessingGateway.asmx</value>
       </setting>
+      <setting name="SOAP_dontDropIt_com_collectorsolutions_stage_ProcessingGateway"
+        serializeAs="String">
+        <value>https://stage.collectorsolutions.com/magic-services/ProcessingGateway.asmx</value>
+      </setting>
     </SOAP_dontDropIt.Properties.Settings>
   </applicationSettings>
 </configuration>
