--- a/SOAP-dontDropIt/Properties/Settings.settings
+++ b/SOAP-dontDropIt/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="SOAP_dontDropIt_com_collectorsolutions_secure_legacy_ProcessingGateway" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">https://secure.collectorsolutions.com/CSI_eCollections_Portal/ProcessingGateway.asmx</Value>
     </Setting>
+    <Setting Name="SOAP_dontDropIt_com_collectorsolutions_stage_ProcessingGateway" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://stage.collectorsolutions.com/magic-services/ProcessingGateway.asmx</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
