--- a/SOAP-dontDropIt/SOAP-dontDropIt.csproj
+++ b/SOAP-dontDropIt/SOAP-dontDropIt.csproj
@@ -214,13 +214,16 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\LaunchPage.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\cubes.png" />
     <Content Include="Images\favicon.png" />
     <Content Include="Images\image2016-7-15 9-52-11.png" />
     <Content Include="Images\jetpay-small.png" />
+    <Content Include="Images\magic-logo-color.png" />
     <Content Include="Images\magic-text-logo.png" />
     <Content Include="Images\magicUtils.png" />
     <Content Include="Images\ring-alt.gif" />
@@ -258,6 +261,7 @@
     <Content Include="Views\LegacyServices\_VirtualTerminalTransactionGetResponsePartial.cshtml" />
     <Content Include="Views\MagicServices\_VirtualTerminalTransactionGetResponsePartial.cshtml" />
     <Content Include="Views\LegacyServices\VirtualTerminalTransactionPost.cshtml" />
+    <Content Include="Views\Home\Launch.cshtml" />
     <None Include="Web References\com.collectorsolutions.secure.legacy\ProcessingGateway.disco" />
     <None Include="Web References\com.collectorsolutions.stage\ProcessingGateway.disco" />
     <Content Include="Web.config" />
