https web config add

--- a/SOAP-dontDropIt/Web.config
+++ b/SOAP-dontDropIt/Web.config
@@ -33,10 +33,24 @@
     <compilation debug="true" targetFramework="4.6"/>
     <httpRuntime targetFramework="4.5.1"/>
   </system.web>
-  <system.webServer>
+  <!--<system.webServer>
     <modules>
       <remove name="FormsAuthentication"/>
     </modules>
+  </system.webServer>-->
+  <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="Redirect to https">
+          <match url="(.*)"/>
+          <conditions>
+            <add input="{HTTPS}" pattern="Off"/>
+            <add input="{REQUEST_METHOD}" pattern="^get$|^head$" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}"/>
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
   <system.serviceModel>
     <behaviors>
