--- a/SOAP-dontDropIt/packages.config
+++ b/SOAP-dontDropIt/packages.config
@@ -48,8 +48,10 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net46" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="NuGet.Core" version="2.12.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
   <package id="System.Buffers" version="4.0.0" targetFramework="net46" />
