tweak to layout and index

--- a/SOAP-dontDropIt/Web.config
+++ b/SOAP-dontDropIt/Web.config
@@ -38,7 +38,7 @@
       <remove name="FormsAuthentication"/>
     </modules>
   </system.webServer>-->
-  <system.webServer>
+  <!--<system.webServer>
     <rewrite>
       <rules>
         <rule name="Redirect to https">
@@ -51,7 +51,7 @@
         </rule>
       </rules>
     </rewrite>
-  </system.webServer>
+  </system.webServer>-->
   <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
