--- a/JPPaymentServicesAPIDemo/Web.config
+++ b/JPPaymentServicesAPIDemo/Web.config
@@ -32,13 +32,14 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.5.1" />
+    <customErrors mode="Off"/>
   </system.web>
   <!--<system.webServer>
     <modules>
       <remove name="FormsAuthentication"/>
     </modules>
   </system.webServer>-->
-  <!--<system.webServer>
+  <system.webServer>
     <rewrite>
       <rules>
         <rule name="Redirect to https">
@@ -51,7 +52,10 @@
         </rule>
       </rules>
     </rewrite>
-  </system.webServer>-->
+    <httpErrors errorMode="Detailed" />
+    <asp scriptErrorSentToBrowser="true"/>
+    <validation validateIntegratedModeConfiguration="false" />
+  </system.webServer>
   <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
